# hte-client

./: .coveragerc  .dockerignore  .gitignore copy  .pre-commit-config.yaml  Dockerfile-dev  README.md  pyproject.toml  requirements.txt  setup.cfg
jupyter/: example_queries.ipynb
jupyter/sql/: A1.sql  A2.sql  C1.sql  C2.sql  D1.sql  D2.sql  D3.sql  D3a.sql  F1.sql  G1.sql  count_samples_by_analysis_type.sql  count_samples_by_element.sql
scripts/ci/: autoflake.sh  lint.sh
src/hte_client/: __init__.py  __main__.py  _enums.py  _exceptions.py  configuration.py
src/hte_client/cli/: main.py  styles.py
src/hte_client/cli/commands/: database.py  download.py  query.py
src/hte_client/core/: download.py  queries.py
src/hte_client/database/: connection.py  session.py
src/hte_client/schema/: base.py  esamp.py  jcap.py
src/hte_client/utils/: log.py
tests/: conftest.py
tests/schemathesis/: test_api.py
