[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 110
skip-string-normalization = true
target-version = ['py36', 'py37', 'py38']

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version = "0.1.0"
version_files = [
  "pyproject.toml:version",
  "src/hte_client/__init__.py",
]

[tool.poetry]
authors = ["Michael Statt <michael.statt@modelyst.io>"]
description = "HTE Plotting and CLI Tool"
license = "Apache-2.0"
name = "hte-client"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
matplotlib = "^3.6.1"
typer = "^0.6.1"
modelyst-dbgen = {version = "^1.0.0a7", allow-prereleases = true}
pandas = "^1.5.1"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
httpx = "^0.23.0"
aiofiles = "^22.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"
mypy = "^0.982"
isort = "^5.10.1"
flake8 = "^5.0.4"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.5"
autoflake = "^1.7.6"
commitizen = "^2.35.0"
types-requests = "^2.28.11.2"

[tool.poetry.scripts]
hte-client = "hte_client.__main__:main"

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = [
  "tests",
]
